[package]
name = "rvc"
version = "0.0.1"
edition = "2021"
author = ["Tomás Antunes <tomassantunes>"]
description = "Simple Version Control System built with rust-lang"
homepage = "https://github.com/tomassantunes/rvc"
repository = "https://github.com/tomassantunes/rvc"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.28"
sha2 = "0.10.8"
walkdir = "2.5.0"
whoami = "1.5.1"
